fix share menu sizing and spacing

--- a/scss/_resets.scss
+++ b/scss/_resets.scss
@@ -12,7 +12,7 @@ html {
 
 body {
   min-height: 100vh;
-  background: rgb(219, 219, 219);
+  background: rgb(238, 238, 238);
   display: flex;
   align-items: center;
   justify-content: center;
